# genericmodule

./: .readthedocs.yaml  pyproject.toml  requirements.txt  sphinx_commands.txt
docs/: conf.py  index.rst
docs/source/: conf.py  genericmodule.rst  index.rst
genericmodule/: __init__.py  functions_a.py  functions_b.py
genericmodule.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
