[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genericmodule"
version = "0.0.0"
authors = [
  { name="Lennart Grimm" },
]
description = "Using this to understand Python modules"
readme = "readme.md"
requires-python = ">=3.7"
dependencies = [
  'numpy'
]

[project.optional-dependencies]
tutorials = ['jupyter']
docs = [
	'sphinx~=5.1',
  'nbsphinx~=0.8',
  'nbsphinx_link~=1.3',
  'sphinx-rtd-theme~=1.0'
]